--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.3",
     "morgan": "~1.9.1",
+    "movie-art": "^1.0.7",
     "pug": "^3.0.2"
   }
 }
